...
@ExperimentalMaterialApi
@Composable
fun ProfileView(viewModel: ProfileViewModel) {
    MyApplicationTheme3 {
        Scaffold(
            modifier = Modifier.semantics {
                contentDescription = "ProfileView"
            },
            containerColor = MaterialTheme.colorScheme.surface,
            topBar = {
                TopBar(
                    title = viewModel.username,
                    isTab = true,
                    actions = {
                        IconButton(
                            modifier = Modifier.semantics {
                                contentDescription = "EditProfileButton"
                            },onClick = { viewModel.navToEditProfile() }) {
                            Icon(
                                Icons.Rounded.Edit,
                                contentDescription = "Knopf um die Nutzerdaten zu editieren."
                            )
                        }
...
