...
                onClick = {
                    clickMiddle()
                }
            )
            NavigationBarItem(
                modifier = Modifier.semantics {
                    contentDescription = "ProfileTab"
                },
                icon = {
                    Icon(
                        if (item == 2) Icons.Rounded.Person else Icons.Outlined.Person,
                        contentDescription = null,
                        tint = MaterialTheme.colorScheme.onPrimary
...
