...
 */
@ExperimentalMaterial3Api
@Composable
fun SignInView(viewModel: SignInViewModel) {
    MyApplicationTheme3 {
        Scaffold(
            modifier = Modifier.semantics { contentDescription = "SignInView" },
            containerColor = MaterialTheme.colorScheme.surface
        ) {
            Column(modifier = Modifier
                .padding(24.dp)
                .padding(it)
                .verticalScroll(
...
